# maxima-exclusion

./: .gitignore  README.md
.github/workflows/: build-ci.yml
maxima-bootstrap/src/: main.rs
maxima-cli/src/: main.rs
maxima-lib/: Cargo.toml
maxima-lib/src/: lib.rs
maxima-lib/src/content/: downloader.rs  exclusion.rs  manager.rs  mod.rs  zip.rs  zlib.rs
maxima-lib/src/core/: background_service_nix.rs  cache.rs  cloudsync.rs  concurrency.rs  dip.rs  ecommerce.rs  endpoints.rs  error.rs  launch.rs  library.rs  mod.rs  service_layer.rs  settings.rs
maxima-lib/src/core/auth/: hardware.rs  login.rs  mod.rs  storage.rs
maxima-lib/src/core/graphql/: GetActiveSalesWithToast.gql  SearchPlayer.gql  availableBuilds.gql  downloadUrl.gql  getLegacyEntitlements.gql  sdkEntitlements.gql
maxima-lib/src/core/manifest/: dip.rs  mod.rs  pre_dip.rs
maxima-lib/src/gameinfo/: mod.rs
maxima-lib/src/gamesettings/: mod.rs
maxima-lib/src/lsx/: connection.rs  mod.rs  service.rs  types.rs
maxima-lib/src/lsx/request/: account.rs  auth.rs  challenge.rs  config.rs  core.rs  game.rs  igo.rs  license.rs  offer.rs  profile.rs  progressive_install.rs  voip.rs
maxima-lib/src/ooa/: mod.rs
maxima-lib/src/rtm/: client.rs  connection.rs  mod.rs
maxima-lib/src/rtm/proto/: requests.proto  rtm.proto
maxima-lib/src/unix/: fs.rs  mod.rs  wine.rs
maxima-lib/src/util/: github.rs  log.rs  native.rs  registry.rs  service.rs  service_win.rs  simple_crypto.rs  wmi_utils.rs
maxima-native/: Cargo.toml
maxima-native/src/: lib.rs
maxima-native/test/: example.c
maxima-resources/src/: lib.rs
maxima-service/: Cargo.toml  build.rs
maxima-service/src/: main.rs
maxima-service/src/service/: error.rs  hash.rs  mod.rs
maxima-tui/src/: main.rs  service.rs
maxima-ui/: Cargo.toml
maxima-ui/res/locale/: en_us.json
maxima-ui/shaders/: abg.frag  abg.vert  gvbg.frag
maxima-ui/src/: bridge_processor.rs  bridge_thread.rs  desktop.rs  enum_locale_map.rs  event_processor.rs  event_thread.rs  game_info_image_handler.rs  game_view_bg_renderer.rs  interact_thread.rs  main.rs  translation_manager.rs  ui_image.rs
maxima-ui/src/bridge/: game_images.rs  get_friends.rs  get_games.rs  login_oauth.rs  mod.rs  start_game.rs
maxima-ui/src/fs/: image_loader.rs
maxima-ui/src/renderers/: app_bg_renderer.rs  game_view_bg_renderer.rs
maxima-ui/src/views/: debug_view.rs  downloads_view.rs  friends_view.rs  game_view.rs  settings_view.rs  undefinied_view.rs
maxima-ui/src/widgets/: enum_dropdown.rs
