[package]
name = "maxima-lib"
version = "0.1.0"
authors = ["Sean Kahler <sean@battleda.sh>"]
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
quick-xml = { version = "0.30.0", features = ["serialize"] }
paste = "1.0.12"
anyhow = "1.0.71"
openssl = "0.10.55"
hex = "0.4.3"
lazy_static = "1.4.0"
reqwest = "0.11.18"
base64 = "0.21.2"
log = "0.4.19"
enable-ansi-support = "0.2.1"
chrono = "0.4.26"
regex = "1.8.4"
directories = "5.0.1"
open = "5.0.0"
querystring = "1.1.0"
ureq = { version = "2.8.0", features = ["tls"] }
sysinfo = "0.29.7"
strum_macros = "0.25.2"
sha2-const = "0.1.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "memoryapi",
    "handleapi",
    "synchapi",
    "wincon",
    "consoleapi",
    "psapi",
    "wininet",
    "winerror",
    "iphlpapi",
    "tcpmib",
    "winsvc",
    "impl-default",
] }
winreg = "0.51.0"
windows-service = "0.6.0"
is_elevated = "0.1.2"
widestring = "1.0.2"
dll-syringe = "0.15.2"

[lib]
name = "maxima"
path = "src/lib.rs"
