[package]
name = "maxima-lib"
version = "1.0.0"
edition = "2021"
authors = ["Sean Kahler <sean@battleda.sh>"]
categories = ["games"]
description = "A free and open-source replacement for the EA Desktop Launcher"
keywords = ["electronic-arts", "linux-gaming"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/ArmchairDevelopers/Maxima"
documentation = "https://docs.rs/maxima"
rust-version = "1.81.0"

[dependencies]
tokio = { version = "1.28.2", features = [
    "full",
    "rt",
    "rt-multi-thread",
    "time",
    "net",
] }
moka = { version = "0.12.1", features = ["sync"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
quick-xml = { version = "0.30.0", features = ["serialize"] }
paste = "1.0.12"
hex = "0.4.3"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["stream", "rustls-tls", "gzip", "json"], default-features = false }
base64 = "0.21.2"
base62 = "2.2.0"
log = "0.4.19"
enable-ansi-support = "0.2.1"
chrono = "0.4.26"
regex = "1.8.4"
directories = "5.0.1"
open = "5.0.0"
querystring = "1.1.0"
ureq = { version = "2.9.1", features = ["tls"] }
sysinfo = "0.29.7"
strum_macros = "0.25.2"
sha2-const = "0.1.2"
tar = "0.4"
flate2 = { version = "=1.0.28", default-features = false, features = ["zlib-default"] }
xz2 = "0.1.7"
zstd = "0.13.0"
toml = "0.8.8"
bytebuffer = "2.2.0"
derive-getters = "0.3.0"
derive_builder = "0.12.0"
mac_address = "1.1.5"
filetime = "0.2.23"
rand = "0.9.0"
ring = "0.17.7"
futures = "0.3.30"
prost = "0.12.3"
encoding = "0.2.33"
async-compression = { version = "0.4.5", features = ["tokio", "deflate"] }
tokio-util = { version = "0.7.10", features = ["io", "compat"] }
uuid = "1.7.0"
tokio-rustls = "0.23.1"
rustls = "0.20.0"
webpki-roots = "0.22.0"
aes = "0.8.4"
ecb = { version = "0.1.2", features = ["std"] }
cbc = { version = "0.1.2", features = ["std"] }
glob = "0.3.1"
md5 = "0.7.0"
bytes = "1.5.0"
async-trait = "0.1.81"
crc32fast = "1.4.2"
async-recursion = "1.1.1"
pelite = "0.10.0"
gethostname = "0.5.0"
thiserror = "2.0.12"
url = "2.5.2"
http = "0.2.12"
globset = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "memoryapi",
    "handleapi",
    "synchapi",
    "wincon",
    "consoleapi",
    "psapi",
    "wininet",
    "winerror",
    "iphlpapi",
    "tcpmib",
    "winsvc",
    "impl-default"
] }
winreg = "0.51.0"
windows-service = "0.6.0"
is_elevated = "0.1.2"
widestring = "1.0.2"
wmi = "0.13.1"

[target.'cfg(target_os = "macos")'.dependencies]
smbios-lib = "0.9.1"

[build-dependencies]
prost-build = "0.12.3"

[lib]
name = "maxima"
path = "src/lib.rs"
