[package]
name = "maxima-service"
version = "0.1.0"
authors = ["Sean Kahler <sean@battleda.sh>"]
edition = "2021"

[dependencies]
maxima-lib = { path = "../maxima-lib" }
tokio = { version = "1.28.2", features = [ "full", "rt", "rt-multi-thread", "time", "net" ] }
serde = { version = "1.0.164", features = [ "derive" ] }
serde_json = "1.0.97"
paste = "1.0.12"
anyhow = "1.0.71"
reqwest = "0.11.18"
base64 = "0.21.2"
log = "0.4.19"
regex = "1.8.4"
directories = "5.0.1"
structured-logger = "1.0.1"
actix-web = "4"
sha2 = "0.10.7"
derive_more = "0.99.17"
hex = "0.4.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "memoryapi", "handleapi", "synchapi", "wincon", "consoleapi" ] }
winreg = "0.50.0"
windows-service = "0.6.0"
dll-syringe = "0.15.2"

[[bin]]
name = "maxima-service"
path = "src/main.rs"