[package]
name = "maxima-ui"
version = "0.1.0"
authors = ["Nick Whelan <cooldood909@gmail.com>"]
edition = "2021"

[dependencies]
maxima-lib = { path = "../maxima-lib" }
winapi = { version = "0.3.9", features = [ "memoryapi", "handleapi", "synchapi", "wincon", "consoleapi", "psapi", "wininet", "winerror", "iphlpapi", "tcpmib" ] }
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
eframe = { version = "0.28.0", features = [ "persistence" ] }
egui = "0.28.0"
egui_extras = {version = "0.28.0", features = [ "svg", "all_loaders" ] }
image = { version = "0.24.6", features = [ "png", "jpeg" ] }
reqwest = { version = "0.11.18", features = ["stream", "rustls-tls"], default-features = false }
serde = "1.0.171"
serde_json = "1.0.100"
tokio = { version = "1.28.2", features = ["full"] }
log = "0.4.19"
egui_demo_lib = "0.28.0"
puffin_http = "0.15.0"
puffin = "0.18.1"
strum = "0.25.0"
strum_macros = "0.25.3"
sys-locale = "0.3.1"
humansize = { version = "2.0.0", features = ["no_alloc"] }

[build-dependencies]
maxima-resources = { path = "../maxima-resources" }

[[bin]]
name = "maxima"
path = "src/main.rs"
